golang-petname (1.10) unreleased; urgency=medium

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 03 Dec 2015 10:07:24 -0600

golang-petname (1.9-0ubuntu1) xenial; urgency=medium

  * debian/golang-petname-dev.install, debian/rules:
    - install the source code to the appropriate location per
      http://pkg-go.alioth.debian.org/packaging.html#_file_locations
    - simplify build rules, remove strip override

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 03 Dec 2015 10:07:22 -0600

golang-petname (1.8-0ubuntu1) xenial; urgency=medium

  * debian/control, debian/rules, debian/update-wordlists.sh:
    - remove build dependency on petname;  only the maintainer
      ever needs to run update-wordlists

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 02 Dec 2015 17:19:08 -0600

golang-petname (1.7-0ubuntu1) xenial; urgency=medium

  * debian/control, debian/rules: LP: #1520687
    - fixes for MIR of -dev library package
    - add a build-depends on dh-golang
    - build --with=golang
    - note the binary was Built-Using
    - add a metapackage that meets the Debian standard naming for go libs

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 02 Dec 2015 16:55:42 -0600

golang-petname (1.6-0ubuntu1) xenial; urgency=medium

  * No op change, testing gopkg in git
  * petname.go:
    - update wordlists, pruning blacklisted words

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 30 Oct 2015 10:20:27 -0500

golang-petname (1.5-0ubuntu1) vivid; urgency=medium

  * debian/update-wordlists.sh, petname.go, README.md:
    - rebuild and release with updated wordlists

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 28 Jan 2015 16:10:03 -0600

golang-petname (1.4-0ubuntu1) vivid; urgency=medium

  * cmd/petname/main.go, petname.go, petname_test.go:
    - change petname.PetName() to petname.Generate()

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 13 Jan 2015 11:19:06 -0600

golang-petname (1.3-0ubuntu1) vivid; urgency=medium

  * petname.go: